Refactor of some painless internals (#91544)
* Use JCL immutable collections more for less copying
* Fix reading cloned reflection arrays in loops
* Replace ArrayList with ArrayDeque for class hierarchy searches